--- a/style.css
+++ b/style.css
@@ -2,18 +2,44 @@ h1{
     color: olive;
 
 }
-#btn{
+
+    
+button{
     background-color: lightgreen;
     font-size: medium;
     font-family:monospace;
     border-radius: 4px;
     border-color: chartreuse;
 }
-#btn:hover{
+button:hover{
     background-color:green;
     font-size: large;
+    }
+button:active{
+    background-color:yellow;
+}
+
+.nav{
+    animation: move;
+    
+
 
 }
-#btn:active{
-    background-color:yellow;
+header{
+    background-image: url('logo.png');
+    background-size:200px;
+    background-repeat: no-repeat;
+    background-position:right;
+    
+}
+#h1d{
+    position:relative;
+    
+}
+.homepage{
+    background-color:
+
+}
+.footer{
+    background-color:green;
 }
