--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
-h1{
-    color: olive;
+#h1d{
+    color: rgb(51, 51, 4);
+    font-family: "sansita","Press Start 2P",sans serif;
+    font-size:50px;
+    
+
+
+}
+#h2id{
+    color: rgb(34, 47, 45);
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
 
 }
 
@@ -7,39 +17,130 @@ h1{
 button{
     background-color: lightgreen;
     font-size: medium;
-    font-family:monospace;
-    border-radius: 4px;
-    border-color: chartreuse;
+    padding: 1rem 2 rem;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    border-radius:8px;
+    
+    border-style:double;
+    box-shadow:0 2px rgb(96, 147, 96);
+    width: 200px;
+    height: 50px;
+    border-color: lightgreen;
+    text-align:center;
+    transition: background 0.2s;
+    cursor: pointer;
+
+    
+
 }
 button:hover{
-    background-color:green;
+    background-color:rgb(49, 171, 49);
     font-size: large;
     }
 button:active{
-    background-color:yellow;
+    background-color:darkolivegreen;
 }
 
 .nav{
-    animation: move;
-    
-
-
+    margin-top:120px;
+    display:flex;
+    flex-wrap:wrap;
+    gap:0.2rem;
+    justify-content: center;
 }
-header{
+.homepage{
+    background-color:aliceblue;
+    padding: 4rem;
+}
+@media(max-width:600px){
+    .nav{
+        flex-direction: column;
+
+    }
+    .homepage{
+        padding:1rem;
+        padding-bottom: 5rem;
+    }
+    button{
+        width: 100%;
+        padding: 0.75rem 1 rem;
+    }
+}
+.header{
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    padding: 2rem 0 1 rem 0;
     background-image: url('logo.png');
     background-size:200px;
     background-repeat: no-repeat;
     background-position:right;
     
 }
-#h1d{
-    position:relative;
-    
+
+
+
+.section{
+    font-family: sans-serif;
+    font-weight:50px;
+    color:rgb(23, 44, 27)
 }
-.homepage{
-    background-color:
+.mainfeatures{
+    display: flex;
+    flex-wrap: center;
+    gap: 1rem;
+    justify-content: center;
+    margin: 1rem 0;
+    color:rgb(33, 45, 45);
+    box-sizing:border-box;
+    box-shadow: 4px;
+    font-family: sans-serif;
 
 }
+.features{
+    background:rgb(220, 251, 226);
+    color:rgb(28, 42, 42);
+    border-radius: 10px;
+    box-shadow: 0 3px 8px rgb(24, 93, 50);
+    padding:2 rem 1.5rem;
+    width:250px;
+    min-height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    text-align: center;
+    transition: box-shadow 1s;
+    
+}
+.features:hover{
+    background: rgb(192, 244, 217);
+    ;
+}
+@media(max-width: 800px){
+.mainfeatures{
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+    }
+    .features{
+        width: 90%;
+        
+    }
+
+}
+    
+
+
+
+
 .footer{
-    background-color:green;
+    background-color:rgb(43, 71, 42);
+    color:whitesmoke;
+    text-align: center;
+    padding: 0.5rem;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
 }
