--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 #h1d{
+
     color: rgb(51, 51, 4);
     font-family: "sansita","Press Start 2P",sans serif;
     font-size:50px;
+    margin: 0%;
+    padding: 0%;
     
 
 
@@ -21,7 +24,6 @@ button{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
     border-radius:8px;
-    
     border-style:double;
     box-shadow:0 2px rgb(96, 147, 96);
     width: 200px;
@@ -43,43 +45,60 @@ button:active{
 }
 
 .nav{
-    margin-top:100px;
+    margin-top:0.5rem;
     display:flex;
     flex-wrap:wrap;
     gap:0.2rem;
     justify-items: center;
-    width: 100%;
+    width: auto;
     padding:1rem 0 ;
+    flex-direction: row;
+    align-items: center;
 }
 .homepage{
     background-color:aliceblue;
     padding: 4rem;
 }
-@media(max-width:600px){
-    .nav{
-        flex-direction: column;
 
-    }
-    .homepage{
-        padding:1rem;
-        padding-bottom: 5rem;
-    }
-    button{
-        width: 100%;
-        padding: 0.75rem 1 rem;
-    }
-}
 .header{
     display:flex;
     flex-direction: column;
     align-items:center;
-    padding: 2rem 0 1 rem 0;
-    background-image: url('logo.png');
-    background-size:200px;
+    padding:1rem 0;
+    background-size:120px;
     background-repeat: no-repeat;
     background-position:right;
+    justify-content: flex-start;
+    gap: 0.5rem;
     
 }
+.site-logo {
+    
+
+    height:100px;
+    width:auto;
+    vertical-align:middle;
+    display:inline-block;
+}
+@media(max-width: 600px)
+{
+.site-logo {
+        height:100px;
+        margin-right: 0.5rem;
+    }
+    .header {
+    flex-direction: column;
+    align-items:center;
+    padding: 1 rem;
+    }
+    .nav{
+        width:auto;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+
 
 
 
@@ -221,3 +240,5 @@ button:active{
 .budget-form button:hover {
     background:rgb(22, 178, 144);
 }
+
+/*warnings box css*/
