MODIFY: style.css file

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ button:active{
     background:rgb(220, 251, 226);
     color:rgb(28, 42, 42);
     border-radius: 10px;
-    box-shadow: 0 3px 8px rgb(24, 93, 50);
+    box-shadow: 0 3px 8px rgb(31, 105, 59);
     padding:2 rem 1.5rem;
     width:300px;
     min-height: 100px;
@@ -138,6 +138,7 @@ button:active{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        align-content: center;
         gap: 1rem;
     }
     .features{
@@ -160,7 +161,7 @@ button:active{
     display: flex;
     position:fixed;
     font-size: 1.2rem;
-    background-color:rgb(7, 65, 41);
+    background-color:rgba(7, 65, 41, 0.794);
     color:rgb(197, 212, 207);
     justify-content: center;
     height:50px;
