--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ button{ /*navigation button styling*/
     font-size: medium;
     padding: 1rem 2 rem;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 400;
+    font-weight: 450;
     border-radius:8px;
     border-style:double;
-    box-shadow:0 2px rgb(96, 147, 96);
-    width: 180px;
-    height: 40px;
+    box-shadow:0 2px rgb(96, 123, 96);
+    width: 190px;
+    height: 60px;
     border-color: lightgreen;
     text-align:center;
     transition: background 0.2s;
@@ -29,9 +29,9 @@ button{ /*navigation button styling*/
 }
 /*navigation button effects*/
 button:hover{
-    background-color:rgb(49, 171, 49);
-    font-size: large;
-    transition: 0.2s;
+    background-color:rgb(72, 203, 72);
+    font-size: 20px;
+    transition: 0.3s;
     }
 button:active{
     background-color:darkolivegreen;
